@@ -1,3 +1,7 @@
+2002-11-10  Jim Meyering  <jim@meyering.net>
+
+	* raise.c: New file.
+
 2002-11-08  Paul Eggert  <eggert@twinsun.com>
 
 	* human.c (human_readable): Revamp to avoid warning about unused
